<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_type"
        android:title="@string/map_type"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/normal"
                    android:title="@string/normal"
                    android:checked="true"/>
                <item
                    android:id="@+id/hybrid"
                    android:title="@string/hybrid"
                    android:checked="false"/>
                <item
                    android:id="@+id/satellite"
                    android:title="@string/satellite"
                    android:checked="false"/>
                <item
                    android:id="@+id/terrain"
                    android:title="@string/terrain"
                    android:checked="false"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/deletePositions"
        android:title="@string/deletePositions"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never"/>

</menu>